# silent-patient-pool-finder

./: .env.example  .gitignore  Makefile  README.md  SPPF_IQVIA_Ideathon_Deck.pptx  SPPF_MVP_Presentation.pptx  SPPF_Methodology_v1.0.docx  SPPF_Methodology_v2.0.backup.docx  SPPF_Methodology_v2.0.docx  Silent_Patient_Pool_Finder.pptx  Silent_Patient_Pool_Finder_20072026_v1.pptx  docker-compose.yml  fix_zip_map.py  ingest_hcp_data.py  ingest_real_data.py  ingest_zcta_data.py  pyproject.toml  pyproject.toml.bak  requirements.txt  run.py  setup_github.sh
.claude/: launch.json
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
config/: conditions.yaml  dimensions.yaml  us.yaml
data/scored/: build_manifest.json  dimension_scores.parquet  source_coverage.json  validation_part3.json
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  DECK_UPDATE_BRIEF.md  EXEC_DEMO_SCRIPT.md  IDEATHON_BATTLE_CARD.md  JURY_100_QA.md  SPPF_PRD.md  STATE_AND_STRATEGY.md  TOOLING_AND_ACCESS.md  VALIDATION_SPINE_SLIDES.md  WORKED_EXAMPLE.md
src/db/: connection.py  writer.py
src/features/: campaign_measurement.py  dimension_scorer.py  hcp_scorer.py  signals.py  zip_scorer.py
src/ingestion/: config.py  download.py  fix_zip_map.py  ingest_hcp_data.py  ingest_real_data.py  ingest_synthea.py  ingest_zcta_data.py  run_pipeline.py  schema.sql  simulate_otc.py  synthetic_generator.py
src/ingestion/open_data/: cdc_places.py  census_acs.py  census_age.py  cms_data.py  (+2 more)
src/model/: score.py  train.py
src/output/: content.py  dashboard.py  data.py  sidebar.py  theme.py
src/quality/: provenance.py  qa_gate.py
src/validation/: baseline_lift.py  part3_tables.py  verify_reproducible.py
tests/: test_campaign_measurement.py  test_dashboard_filters.py  test_dimension_scorer.py  test_hcp_ingest.py  test_hcp_scorer.py  test_ingestion.py  test_provenance.py  test_qa_gate.py  test_weight_sensitivity.py
(+12 files in other folders)
