[tool.poetry]
name = "silent-patient-pool-finder"
version = "0.1.0"
description = "Multi-signal inference engine to identify undiagnosed chronic-disease patient pools"
authors = ["Zorawar Singh Nandwal"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1"
psycopg2-binary = "^2.9"
sqlalchemy = "^2.0"
python-dotenv = "^1.0"
numpy = "^1.26"
tqdm = "^4.66"
loguru = "^0.7"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0"
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.0"
ruff = "^0.1"
ipykernel = "^6.0"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
