# Project metadata + tool configuration.
# Dependencies are managed in requirements.txt (single source of truth):
#   pip install -r requirements.txt

[project]
name = "silent-patient-pool-finder"
version = "2.0.0"
description = "Multi-signal inference engine to identify undiagnosed chronic-disease patient pools"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Zorawar Singh Nandwal" }]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E4/E7/E9: import & statement errors, F: pyflakes (undefined names, unused
# imports/variables). Line-length (E501) is left to black's judgement.
select = ["E4", "E7", "E9", "F"]
# E402 is structural here: every entry-point script starts with a sys.path /
# cwd bootstrap (Streamlit Cloud + `python3 src/ingestion/<script>.py`), and
# the house style puts `from __future__` + module docstring before imports.
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (deselect with '-m \"not slow\"')",
]
